--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,12 @@
 .container{
-    text-align: center; /* center the child */
     border-radius: 25px;
-    width: 500px;
+    width: 30%;
     height: 300px;
-    padding:5px;
+    padding:10px 20px;
     font-size:20px;
     background-color:#f8f8f8;
+}
+
+p{
+    text-align: left;
 }
