--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,36 @@
     font-size:20px;
     background-color:#f8f8f8;
 }
-
+.card p{
+    text-align: center;
+    font-size: 20px;
+}
 p{
     text-align: left;
+
 }
+
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    border-radius: 5px;
+}
+
+.column{
+    float: left;
+    width: 30%;
+    padding: 20px 30px;
+    justify-content: center;
+}
+
+.row{
+    margin: 0 -5px;
+    justify-content: center;
+}
+.row:after{
+    display: table;
+    clear: both;
+}
+
+
+
